// src/navigation/stacks/WardrobeStack.tsx
import * as React from "react";
import { createNativeStackNavigator } from "@react-navigation/native-stack";
import WardrobeScreen from "../../screens/Cloth/WardrobeScreen";
import { TranslationServiceInstance } from "../../i18n/TranslationService";
// przykładowe szczegóły/edycja:
function WardrobeDetailsScreen() {
  return null;
}

export type WardrobeStackParamList = {
  Wardrobe: undefined;
  WardrobeDetails: { id: number };
};

const Stack = createNativeStackNavigator<WardrobeStackParamList>();

export default function WardrobeStack() {
  return (
    <Stack.Navigator>
      <Stack.Screen
        name="Wardrobe"
        component={WardrobeScreen}
        options={{
          title: TranslationServiceInstance.t("Wardrobe"),
          testID: "WardrobeTab",
          tabBarAccessibilityLabel:
            TranslationServiceInstance.t("Wardrobe tab"),
        }}
      />
      <Stack.Screen
        name="WardrobeDetails"
        component={WardrobeDetailsScreen}
        options={{ title: TranslationServiceInstance.t("Details") }}
      />
    </Stack.Navigator>
  );
}
